[BACKEND]
[Branch: develop] Update project documentation.

Signed-off-by: Daniel Perez Serrano <117571463+Dani-Ps@users.noreply.github.com>